# music-bike

./: LICENSE  README.md  v0.2_w_BLE.ino
FMODSetup/FMODSetup/: FMODSetup.cpp
FMODSetup/PlayFMODBank/FMODSetup/: FMODSetup.cpp  FMODSetup.vcxproj  (+1 more)
FMODSetup/PlayWavFiles/: FMODSetup.sln
FMODSetup/event_parameter/: local.properties
MusicBike/: settings.gradle.kts
MusicBike/app/: build.gradle.kts
MusicBike/app/src/main/cpp/: CMakeLists.txt  musicbike.cpp
MusicBike/gradle/: libs.versions.toml
app_build/: settings.gradle
app_build/app/: build.gradle
embedded/: ble_transmitter.io  v0.2.ino  v0.3.cpp
embedded/Bike_Sensor/: Bike_Sensor.ino
embedded/Bike_Sensor_Filtered_IMU/: Bike_Sensor_Filtered_IMU.ino
embedded/Bike_Sensor_w_Kalman_Filter/: Bike_Sensor_w_Kalman_Filter.ino
embedded/Bike_Sensor_w_Testing_Features/: Bike_Sensor_w_Testing_Features.ino
tensorflow/BikeTrickData/: 180t10n.txt  180t10n_1.txt  180t10n_10.txt  180t10n_11.txt  180t10n_12.txt  180t10n_13.txt  180t10n_14.txt  180t10n_15.txt  180t10n_16.txt  180t10n_2.txt  180t10n_3.txt  180t10n_4.txt  180t10n_5.txt  180t10n_6.txt  180t10n_7.txt  180t10n_8.txt  180t10n_9.txt  HOPt10n.txt  HOPt10n_1.txt  HOPt10n_10.txt  HOPt10n_11.txt  HOPt10n_12.txt  HOPt10n_13.txt  HOPt10n_14.txt  HOPt10n_15.txt  HOPt10n_16.txt  HOPt10n_2.txt  HOPt10n_3.txt  HOPt10n_4.txt  HOPt10n_5.txt  HOPt10n_6.txt  HOPt10n_7.txt  HOPt10n_8.txt  HOPt10n_9.txt  NoJpOr180t10n.txt  NoJpOr180t10n_1.txt  NoJpOr180t10n_10.txt  NoJpOr180t10n_11.txt  NoJpOr180t10n_12.txt  NoJpOr180t10n_13.txt  (+11 more)
tensorflow/training/: training.py
(+113 files in other folders)
